@@ -108,15 +108,13 @@ public interface ClusterStateProvider extends SolrCloseable {
   /** Obtain a cluster property, or the default value if it doesn't exist. */
   default <T> T getClusterProperty(String key, T defaultValue) {
     @SuppressWarnings({"unchecked"})
-    T value = (T) getClusterProperties().get(key);
+    T value = (T) getClusterProperty(key);
     if (value == null) return defaultValue;
     return value;
   }
 
   /** Obtain a cluster property, or null if it doesn't exist. */
-  default Object getClusterProperty(String propertyName) {
-    return getClusterProperties().get(propertyName);
-  }
+  Object getClusterProperty(String propertyName);
 
   /** Get the collection-specific policy */
   String getPolicyNameByCollection(String coll);
